new proj/src/objects/Work_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>( EndTime__c - StartTime__c )*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Air_Tickets_Booked__c</fullName>
        <label>Air Tickets Booked</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Co_Worker__c</fullName>
        <label>Co-Worker</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Collect_Where__c</fullName>
        <label>Collect Where</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Offshore_Fax__c</fullName>
        <label>Contact Offshore Fax.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Onshore_Fax__c</fullName>
        <label>Contact Onshore Fax.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Offshore_Tel__c</fullName>
        <label>Contact Person Offshore Tel.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Offshore__c</fullName>
        <label>Contact Person Offshore</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Onshore_Tel__c</fullName>
        <label>Contact Person Onshore Tel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Onshore__c</fullName>
        <label>Contact Person Onshore</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Customer__c</fullName>
        <formula>Work_Order__r.SVMXC__Company__r.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_External_Timesheets_to_be_written__c</fullName>
        <label>External Timesheets to be written?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Heliport__c</fullName>
        <label>Heliport</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Mobilization_Date_Time__c</fullName>
        <label>Mobilization Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Project__c</fullName>
        <formula>Work_Order__r.SVMXC__Case__r.GE_SS_Project__r.Name</formula>
        <label>Project #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Report_Responsible__c</fullName>
        <label>Report Responsible</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Rig__c</fullName>
        <formula>Work_Order__r.GE_SS_Rig_Vessel_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rig (place)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Shift__c</fullName>
        <label>Shift</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_info_needed_offshore__c</fullName>
        <label>Technical info needed offshore?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Well_ID__c</fullName>
        <formula>Work_Order__r.GE_SS_Well_ID__r.Name</formula>
        <label>Well#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>TEXT( FLOOR( 24 * ( (EndTime__c - StartTime__c) - FLOOR((EndTime__c - StartTime__c)) ))) &amp; &quot;.&quot; &amp;
TEXT( ROUND(60 * (ROUND( 24 * ( (EndTime__c - StartTime__c) - FLOOR((EndTime__c - StartTime__c)) ),8) - FLOOR(
ROUND( 24 * ( (EndTime__c - StartTime__c) - FLOOR((EndTime__c - StartTime__c)) ),8)) ),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miles_Traveled__c</fullName>
        <label>Miles Traveled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technician_Activity__c</fullName>
        <label>Technician Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Completed Vehicle Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician Start of Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician Leaving site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech En Route</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician End of Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician on Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician on Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician on Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techincian Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician Estimating Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician Standdown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technician_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Technician Assignments</relationshipLabel>
        <relationshipName>Technician_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <label>Work Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Technician Assignments</relationshipLabel>
        <relationshipName>Technician_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Technician Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Technician Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>